added code to the HTML file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,40 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>The meta elements, found in the parent head element, contains info for the browser.</li>
+          <li>Your page should only have 1 "h1" level heading.</li>
+          <li>Semantic elements are easier to read for others looking at your code.</li>
+        </ul>
+      </section>
+
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here.</li>
+        </ul>
+      </section>
+
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git status: checks out what branch we are currently on</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>Add notes to git commits to show what changes were made for this commit.</li>
+          <li>git pull origin main: makes the local main branch match the main branch online</li>
+        </ul>
+      </section>
+
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter your JavaScript notes here.</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
