added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
     <header id="top">
-      <h1>Prework Study Guide</h1>
+      <h1 id="pageTitle">Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
@@ -26,7 +27,11 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here.</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>Use an external CSS style sheet to help use DRY Code.</li>
+          <li>Separation of concerns: separate coding into files based on use</li>
+          <li>The asterisk wild card symbol can be used to apply CSS to all elements.</li>
         </ul>
       </section>
 
@@ -36,6 +41,7 @@
           <li>git status: checks out what branch we are currently on</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
           <li>Add notes to git commits to show what changes were made for this commit.</li>
+          <li>Changes must be staged before they can be committed.</li>
           <li>git pull origin main: makes the local main branch match the main branch online</li>
         </ul>
       </section>
