--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here.</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>The JS file is linked in the body of the HTML page.</li>
+          <li>JavaScript indexes start at 0.</li>
+          <li>An array is a way to store a group of variables.</li>
         </ul>
       </section>
     </main>
