changed text on index.html file

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li>Control flow is the order in which a computer executes code in a script.</li>
           <li>The JS file is linked in the body of the HTML page.</li>
           <li>JavaScript indexes start at 0.</li>
-          <li>An array is a way to store a group of variables.</li>
+          <li>An array is a way to store a group of values.</li>
         </ul>
       </section>
     </main>
